working with more advanced http request